# gnat

./: .gitignore  CMakeLists.txt  README
data/gui/: gui.oyster
data/materials/: fs.glsl  gui.material  gui_fs.glsl  gui_vs.glsl  test.material  voxel.material  voxel_fs.glsl  voxel_vs.glsl  vs.glsl
data/meshes/: monkey.ply  monkey_uv.ply
samples/: CMakeLists.txt  sample.cc
src/: CMakeLists.txt  gnat.h
src/event/: dummy_event_target.h  event_handler.h  message.h  observable.cc  observable.h  observable_unittest.cc  observer.cc  observer.h  observer_unittest.cc  signal.cc  signal.h  signal_unittest.cc  slot.cc  slot.h  slot_unittest.cc
src/game/: game.cc  game.h  game_state.h
src/gfx/: camera.cc  camera.h  framebuffer_object.cc  framebuffer_object.h  gl_platform_context.h  glx_platform_context.cpp  glx_platform_context.h  graphics_context.cc  graphics_context.h  node.cc  node.h
src/gfx/material/: material.cc  material.h  program.cc  program.h  shader.cc  shader.h  texture.cc  texture.h
src/gfx/math/: matrix3.cc  matrix3.h  matrix4.cc  matrix4.h  quaternion.cc  quaternion.h  vector3.cc  vector3.h  vector3_perftest.cc  vector3_unittest.cc  vector4.cc  vector4.h
src/gfx/math/geometry/: aabb.cc  aabb.h
src/gfx/math/simd/: util.h  vector4_add.asm  vector4_simd.h
src/gfx/platform/: glx_platform_context.cc  glx_platform_context.h
src/gfx/scene/: camera.cc  camera.h  drawable.cc  drawable.h  drawable_unittest.cc  fps_camera.cc  fps_camera.h  mesh.cc  mesh.h  mesh_drawable.cc  mesh_drawable.h  node.cc  node.h  node_unittest.cc  scene_manager.cc  scene_manager.h
src/gfx/scene/voxel/: chunk.cc  chunk.h  chunk_traits.cc  chunk_traits.h  chunk_unittest.cc  voxel.h
src/gfx/util/: buffer_object.cc  buffer_object.h  mesh_data.cc  mesh_data.h  oyster_mesh.cc  oyster_mesh.h
src/platform/: gl_platform_context.h  input_platform_context.h  keycodes.cc  keycodes.h  platform_context.h
src/platform/sdl/: sdl_keycode_conversion.cc  sdl_keycode_conversion.h  sdl_platform_context.cc  sdl_platform_context.h
src/tests/: test_main.cc
src/util/: color.h  color_unittest.cc  file_utils.cc  file_utils.h  file_utils_unittest.cc  json.cc  json.h  json_unittest.cc  logger.cc  logger.h  scoped_ptr.h  string_utils.cc  string_utils.h  string_utils_unittest.cc  thread_pool.cc  thread_pool.h  timer.cc  timer.h
